syntax = "proto3";
package member;

message Member {
    int32 user_id = 1;
    int32 chat_id = 2;
}
